--- a/notebooks/01_introduction.ipynb
+++ b/notebooks/01_introduction.ipynb
@@ -169,9 +169,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5939e48",
+   "metadata": {},
+   "source": [
+    "ALWAYS use 0-1 for scale"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea037bcd-ec45-4ea2-bf92-c6115b057f09",
+   "id": "851b45a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
